# Compi-HW5

./: CMakeLists.txt  README.md  Registers.cpp  Registers.h  Semantics.cpp  Semantics.h  makefile  parser.ypp
idan_tests/: t11.out  t12.out  t14.out  t16.out  t17.out  t18.out  t19.out  t21.out  t22.out  t23.out  t24.out  t25.out  t26.out  t27.out  t28.out  t4.out  t5.out  t6.out  t8.out  t9.out  te1.out  te14.out  te2.out  te22.out  te25.out  te26.out  te29.out  te30.out  te38.out  te39.out  te40.out  te41.out
prev_tests/: t20.in  t20.out  t22.out  t25.in  t25.out  t31.out  t32.out  t33.out  t36.in  t36.out  t38.out  t4.in  t4.out  t41.in  t41.out
student_tests/: t05-bytes.in  t05-bytes.out  t08-extra-logic.in  t08-extra-logic.out  t10-vartests.out  t11-nested-loops.out  t12-func-calls.in.res  t13-func-calls-rets.out  t14-func-short-circuits.in.res  t15-func-param-ordering.out  t16-control-flow-weirdness.in  t16-control-flow-weirdness.out  t18-large-expressions.in.out  t19-large-expressions-more.in.res  t21-short-circuit-zerodiv.in  test_switch1.in  test_switch1.out  test_switch2.in  test_switch2.out  test_switch3.in  test_switch3.out  test_switch4.in  test_switch4.out  test_switch5.in
switch/: switch_test.in  switch_test.out
